force-app/main/default/objects/CMN_WebserviceSetting__mdt/CMN_WebserviceSetting__mdt.object-meta.xml
<CustomObject>
    <description>Use this to register various web service handlers and their settings such as endpoint, named credentials etc.</description>
    <label>Webservice Setting</label>
    <pluralLabel>Webservice Settings</pluralLabel>
</CustomObject>