force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/AOB_AddPath__c.field-meta.xml
<CustomField>
    <fullName>AOB_AddPath__c</fullName>
    <label>Additional Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>