force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/AOB_DefaultChannel__c.field-meta.xml
<CustomField>
    <fullName>AOB_DefaultChannel__c</fullName>
    <defaultValue>&quot;SF_SBG&quot;</defaultValue>
    <label>DefaultChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>