force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_AdditionalKey__c.field-meta.xml
<CustomField>
    <fullName>CMN_AdditionalKey__c</fullName>
    <description>CMN_AdditionalKey__c</description>
    <label>CMN_AdditionalKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>