force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_AddStackTraceToExceptions__c.field-meta.xml
<CustomField>
    <fullName>CMN_AddStackTraceToExceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then when an error is encountered, the system will add the stack track to the errors lists on Queue Item and in responses.</description>
    <label>Add Stack Trace to Exceptions</label>
    <type>Checkbox</type>
</CustomField>