force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_ApiKey__c.field-meta.xml
<CustomField>
    <fullName>CMN_ApiKey__c</fullName>
    <description>Can be used to define additional information required when doing API all</description>
    <label>ApiKey</label>
    <length>80</length>
    <type>Text</type>
</CustomField>