force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_BackoffPeriod__c.field-meta.xml
<CustomField>
    <fullName>CMN_BackoffPeriod__c</fullName>
    <label>Backoff Period (sec)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>