force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>CMN_Client_Secret__c</fullName>
    <description>OAuth Client Secret</description>
    <label>Client Secret</label>
    <length>80</length>
    <type>Text</type>
</CustomField>