force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>CMN_ClientID__c</fullName>
    <description>OAuth Client ID</description>
    <label>ClientID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>