force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_CompanyID__c.field-meta.xml
<CustomField>
    <fullName>CMN_CompanyID__c</fullName>
    <label>CompanyID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>