force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_MaxRetriesNo__c.field-meta.xml
<CustomField>
    <fullName>CMN_MaxRetriesNo__c</fullName>
    <label>Max Retries No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>