force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>CMN_NamedCredential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>