force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_Password__c.field-meta.xml
<CustomField>
    <fullName>CMN_Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>