force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_Path__c.field-meta.xml
<CustomField>
    <fullName>CMN_Path__c</fullName>
    <description>Relative path for a service call; prefixed by the URL provided either by a Named Credential or the Endpoint URL field</description>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>