force-app/main/default/objects/CMN_WebserviceSetting__mdt/fields/CMN_Username__c.field-meta.xml
<CustomField>
    <fullName>CMN_Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>